--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -25705,6 +25705,9 @@
         }
       }
     },
+    "Enable RTMP audio" : {
+
+    },
     "Enable the RTMP server to see URLs." : {
       "localizations" : {
         "de" : {
