Blur freeze frame when changing camera toggle.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -14652,6 +14652,9 @@
         }
       }
     },
+    "Blur scene switch" : {
+
+    },
     "Bold message" : {
       "localizations" : {
         "de" : {
