--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -42354,6 +42354,9 @@
         }
       }
     },
+    "MetalPetal filters" : {
+
+    },
     "Mic" : {
       "localizations" : {
         "de" : {
