Debug of RTMP connect network is down error.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -55260,6 +55260,9 @@
         }
       }
     },
+    "RTMP waiting close" : {
+
+    },
     "rtmp://a.rtmp.youtube.com/live2" : {
       "localizations" : {
         "de" : {
