Find a face UI design.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -30915,6 +30915,9 @@
         }
       }
     },
+    "Find a face" : {
+
+    },
     "Find your channel name (myChannelName) and video id (myVideoId) in your stream's URL." : {
       "localizations" : {
         "de" : {
