Fix RTMP server audio for (only?) SRT(LA) output.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -42859,6 +42859,9 @@
         }
       }
     },
+    "Mic orientation %@" : {
+
+    },
     "Minimum bitrate decrease speed" : {
       "localizations" : {
         "de" : {
