Mirror front camera on stream toggle.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -43119,6 +43119,9 @@
         }
       }
     },
+    "Mirror front camera on stream" : {
+
+    },
     "Mirrored" : {
       "localizations" : {
         "de" : {
